# iragca-python

./: .env.example  404.html  LICENSE  Makefile  README.md  index.html  objects.inv  pyproject.toml
.github/workflows/: docs.yml  lint-and-unit-test.yml
RunLogger/: index.html
docs/: mkdocs.yml  zensical.toml
docs/docs/: examples.md  index.md
docs/docs/api-reference/: RunLogger.md  functional.md  index.md  matplotlib.md  run-logger.md  warnings.md
iragca/functional/: __init__.py  pipeline.py
iragca/matplotlib/: __init__.py  color.py  styles.py
iragca/matplotlib/styles/: ml.mplstyle
iragca/ml/: __init__.py  runlogger.py
iragca/warnings/: __init__.py  deprecated.py
search/: search_index.json
tests/: test_imports.py
tests/functional/: test_pipeline.py
tests/ml/: test_runlogger.py
tests/warnings/: test_deprecated.py
